fixed display on iOS, including safari

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -3,7 +3,7 @@
     height: var(--app-height);
 }
 
-.i-safari{
+.i-iOS{
     display: flex;
     height: -webkit-fill-available;
 }
